--- a/files_from_statuspage/custom_html.html
+++ b/files_from_statuspage/custom_html.html
@@ -20,4 +20,4 @@
         </script>
     </div>
 </div>
-<script async src="https://s3.amazonaws.com/staus-preact/bundle.js"></script>
+<script async src="https://s3.amazonaws.com/statuspage-ni/bundleV3.js"></script>
